--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "watch": "tsc --watch --noEmit --noErrorTruncation --pretty",
         "build": "rm -rf ./dist && npx tsc --project tsconfig.esm.json && npx tsc --project tsconfig.cjs.json && npm run build:wrap-cjs && npm run build:wrap-esm",
         "build:wrap-cjs": "node ./tools/wrap-cjs",
-        "build:wrap-esm": "node ./tools/wrap-esm"
+        "build:wrap-esm": "node ./tools/wrap-esm",
+        "test": "rm -rf ./test/cjs && npx tsc -t es5 -experimentalDecorators true test/test.ts -outDir ./test/cjs && node ./tools/wrap-test && node ./test/cjs/test/test.cjs && rm -rf ./test/cjs"
     },
     "devDependencies": {
         "typescript": "^4.7.4"
